[gd_scene format=3 uid="uid://dymn6mnbvvqg6"]

[ext_resource type="Script" uid="uid://rgxpacedvs87" path="res://Scripts/Exit.gd" id="1_exit"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit"]
size = Vector2(32, 32)

[node name="Exit" type="Area2D" unique_id=1690382508]
script = ExtResource("1_exit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=552277518]
shape = SubResource("RectangleShape2D_exit")

[node name="CompletionUI" type="CanvasLayer" parent="." unique_id=1502349723]
visible = false

[node name="ColorRect" type="ColorRect" parent="CompletionUI" unique_id=1391951003]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="CompletionUI" unique_id=1263288403]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CompletionUI/CenterContainer" unique_id=1287527082]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CompletionUI/CenterContainer/VBoxContainer" unique_id=1269179014]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "Level Complete!"
horizontal_alignment = 1

[node name="Message" type="Label" parent="CompletionUI/CenterContainer/VBoxContainer" unique_id=359374502]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 8
text = "You escaped the lab!"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="CompletionUI/CenterContainer/VBoxContainer" unique_id=784628596]
custom_minimum_size = Vector2(63, 15)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.4, 0.85, 1)
theme_override_font_sizes/font_size = 9
text = "Return to Menu"

[connection signal="pressed" from="CompletionUI/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_to_menu_pressed"]
